--- a/app/webroot/css/Pages/Main.css
+++ b/app/webroot/css/Pages/Main.css
@@ -2,8 +2,7 @@ body {
     padding-top: 50px;
 }
 
-.container .starter-template {
-    padding: 40px 15px;
+.container .content{
     text-align: center;
     background-color:rgba(0, 0, 0, 0.87);
     color: #fff;
