--- a/app/webroot/css/index.css
+++ b/app/webroot/css/index.css
@@ -3,13 +3,20 @@
     src: url('/Fonts/CARDC.TFF') format("truetype");
 }
 
+.container .content{
+    text-align: center;
+    background-color:rgba(0, 0, 0, 0.87);
+    color: #fff;
+    font-weight: bold;
+}
+
 body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #eee;
 }
 
-.form-signin {
+#content {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
