--- a/app/webroot/css/index.css
+++ b/app/webroot/css/index.css
@@ -54,3 +54,11 @@ h2{
 input[type="submit"]{
     margin-top: 10px;
 }
+
+ #map-container {
+    padding: 0 0 0 0;
+    max-width: 400px;
+    max-height: 200px;
+    width: 400px;
+    height: 200px;
+}
