--- a/app/webroot/css/Pages/Torneio/Editar.css
+++ b/app/webroot/css/Pages/Torneio/Editar.css
@@ -72,3 +72,13 @@
 .bubble-top:hover:before, .bubble-top:focus:before, .bubble-top:active:before {
   top: -10px;
 }
+
+#deletarJogador{
+    float: right;
+    margin-right: 10px;
+}
+
+#deletarJogador a{
+    text-decoration: none;
+    color: #fff;
+}
