--- a/app/webroot/css/index.css
+++ b/app/webroot/css/index.css
@@ -14,6 +14,7 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #eee;
+  font-family: 'Sanchez','Lucida Grande', Tahoma, Verdana, sans-serif,FontCard;
 }
 
 #content {
