--- a/app/webroot/css/Pages/Torneio/VerTabelaJogadores.css
+++ b/app/webroot/css/Pages/Torneio/VerTabelaJogadores.css
@@ -31,7 +31,7 @@ table th{
 }
 
 .players dd{
-    margin-left: -110px;
+    left: 100px;
     z-index: 30;
     padding: 1px 1px 1px 1px;
     visibility: hidden;
@@ -68,4 +68,32 @@ table th{
 .table td a{
     color: #fff;
     text-decoration:none;
+}
+
+/* Bubble Top */
+.bubble-top {
+  display: inline-block;
+  position: relative;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  left: calc(30% - 30px);
+}
+.bubble-top:before {
+  pointer-events: none;
+  position: absolute;
+  z-index: -1;
+  content: '';
+  border-style: solid;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: top;
+  transition-property: top;
+  left: calc(50% - 10px);
+  top: -10px;
+  border-width: 0 10px 10px 10px;
+  border-color: transparent transparent #e1e1e1 transparent;
+}
+.bubble-top:hover:before, .bubble-top:focus:before, .bubble-top:active:before {
+  top: -10px;
 }
