Editar Tabela Jogadores Trabalhando

--- a/app/webroot/css/Pages/JogadoresTorneios/TabelaJogadores.css
+++ b/app/webroot/css/Pages/JogadoresTorneios/TabelaJogadores.css
@@ -97,3 +97,7 @@ table th{
 .bubble-top:hover:before, .bubble-top:focus:before, .bubble-top:active:before {
   top: -10px;
 }
+
+.inputsections input{
+    visibility: hidden;
+}
