--- a/app/webroot/css/Pages/Contato/View.css
+++ b/app/webroot/css/Pages/Contato/View.css
@@ -26,21 +26,10 @@ label{
     padding: 0 0 3px 0;
 }
 
-.maps{
-    padding: 0 0 0 0;
-    max-width: 400px;
-    max-height: 200px;
-}
-.maps iframe{
-    width: 400px;
+.maps iframe {
+    width: 100%;
     height: 200px;
 }
-
-.btn.btn-primary{
-    width: 440px;
-    margin: 0 0 0 -15px;
-}
-
 
 #contato{
     text-align: center;
@@ -48,4 +37,12 @@ label{
     color: #fff;
     font-weight: bold;
     padding: 10px;
+}
+
+.col-xs-6.col-sm-4{
+    width: 100%;
+}
+
+.btn.btn-primary{
+    width: 100%;
 }
