--- a/app/webroot/css/index.css
+++ b/app/webroot/css/index.css
@@ -1,15 +1,3 @@
-@font-face {
-    font-family: 'FontCard';
-    src: url('/Fonts/CARDC.TFF') format("truetype");
-}
-
-.container .content{
-    text-align: center;
-    background-color:rgba(0, 0, 0, 0.87);
-    color: #fff;
-    font-weight: bold;
-}
-
 body {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -17,19 +5,29 @@ body {
   font-family: 'Sanchez','Lucida Grande', Tahoma, Verdana, sans-serif,FontCard;
 }
 
-#content {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
-  background-color: rgba(0, 0, 0, 0.71);  
-}
 h2{
     color: #eee;
     text-transform: uppercase;
     font-weight: bold;
 }
-.form-signin .form-signin-heading{
+.container{
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+    background-color: rgba(0, 0, 0, 0.71);  
+}
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
   margin-bottom: 10px;
+}
+.form-signin .checkbox {
+  font-weight: normal;
 }
 .form-signin .form-control {
   position: relative;
@@ -43,27 +41,35 @@ h2{
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="text"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+.form-signin input[type="email"] {
+  margin-bottom: 5px;
 }
 .form-signin input[type="password"] {
-    margin: 5px 0 0 0;
+  margin-bottom: 10px;
 }
 
-input[type="submit"]{
-    margin-top: 10px;
-}
-
-#map-container {
+/*#map-container {
     padding: 0 0 0 0;
     max-width: 400px;
     max-height: 200px;
     width: 400px;
     height: 200px;
+}*/
+
+#map-container{
+    width: 100%;
+    height: 225px;
 }
 
 .modal-body{
     margin-top: -31px;
+}
+
+
+.col-xs-6.col-sm-4{
+    width: 100%;
+}
+
+.btn.btn-primary{
+    width: 100%;
 }
