--- a/app/webroot/css/Pages/Torneio/Editar.css
+++ b/app/webroot/css/Pages/Torneio/Editar.css
@@ -36,14 +36,18 @@
     max-width: 98%;
 }
 
+.center{
+    margin: auto auto auto auto
+}
+
+.table-responsive{
+    margin-left: 5%; 
+}
+
 .btn.btn-default.btn-lg.btn-block{
-    margin-left: -60px;
+    margin-left: 3%;
+    width: calc(100% - 10px);
 }
-
-#dtable{
-    margin-left: 10px;
-}
-
 
 /* Bubble Top */
 .bubble-top {
