--- a/app/webroot/css/Pages/Espaco K9/Forum/Ver.css
+++ b/app/webroot/css/Pages/Espaco K9/Forum/Ver.css
@@ -1,5 +1,5 @@
 .panel.panel-default{
-    margin: -30px 0 0 0;
+    margin: 0 0 0 0;
     width: 100%;
     background-color: #333;
     color: #fff;
