--- a/app/webroot/css/Pages/JogadoresTorneios/TabelaJogadores.css
+++ b/app/webroot/css/Pages/JogadoresTorneios/TabelaJogadores.css
@@ -101,3 +101,13 @@ table th{
 .inputsections input{
     visibility: hidden;
 }
+
+.table-responsive{
+    overflow-x: hidden;
+}
+
+@media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
+    .table-responsive{
+        overflow-x: auto;
+    }
+}
