--- a/app/webroot/css/Pages/Torneio/Editar.css
+++ b/app/webroot/css/Pages/Torneio/Editar.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
+    .table-responsive{
+        overflow-x: auto;
+    }
+}
+
 .new-tournament{
     margin: auto auto auto 0;    
 }
